--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>АвтоПроверено.рф</title>
-	<meta name="description" content="descr">
+	<meta name="description" content="Авто с пробегом в Самаре">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
