--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 	<meta charset="utf-8">
 	<title>АвтоПроверено.рф</title>
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<link rel="icon" href="img/favicon.png">
-	<meta property="og:image" content="img/preview.jpg">
+	<meta property="og:image" content="img/variant-4A.png">
 
 	<link rel="stylesheet" href="css/main.css">
 </head>
@@ -17,14 +17,13 @@
 
 	<div class="container">
 		<header>
-			<img src="img/logo-AP-gor-1.png" alt="" class="image logo">
+			<img src="img/logo-AP-gor-1.png" class="image logo" alt="АвтоПроверено.рф">
 		</header>
 		<h1>Выкуп и продажа<br> автомобилей с пробегом</h1>
 		<a href="tel:88003011244" class="phone">
 			<span class="purple">8 (800) </span>
 			<span class="green">30-11-244</span>
 		</a>
-		<!-- <img src="img/cars.png" class="image primary-image" alt=""> -->
 	</div>
 
 </body>
