--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-	<link rel="icon" href="img/favicon.png">
+	<link rel="icon" href="img/favicon-16x16.png">
 	<meta property="og:image" content="img/variant-4A.png">
 
 	<link rel="stylesheet" href="css/main.css">
