--- a/index.html
+++ b/index.html
@@ -2,13 +2,33 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>АвтоПроверено.рф</title>
+	<title>АвтоПроверено.РФ</title>
 	<meta name="description" content="Авто с пробегом в Самаре">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-	<link rel="icon" href="img/favicon-16x16.png">
-	<meta property="og:image" content="img/variant-4A.png">
+	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="img/favicomatic/apple-touch-icon-57x57.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/favicomatic/apple-touch-icon-114x114.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/favicomatic/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/favicomatic/apple-touch-icon-144x144.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="60x60" href="img/favicomatic/apple-touch-icon-60x60.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="img/favicomatic/apple-touch-icon-120x120.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="img/favicomatic/apple-touch-icon-76x76.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="img/favicomatic/apple-touch-icon-152x152.png" />
+	<link rel="icon" type="image/png" href="img/favicomatic/favicon-196x196.png" sizes="196x196" />
+	<link rel="icon" type="image/png" href="img/favicomatic/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/png" href="img/favicomatic/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="img/favicomatic/favicon-16x16.png" sizes="16x16" />
+	<link rel="icon" type="image/png" href="img/favicomatic/favicon-128.png" sizes="128x128" />
+	<meta name="application-name" content="Авто Проверено"/>
+	<meta name="msapplication-TileColor" content="#4D328D" />
+	<meta name="msapplication-TileImage" content="img/favicomatic/mstile-144x144.png" />
+	<meta name="msapplication-square70x70logo" content="img/favicomatic/mstile-70x70.png" />
+	<meta name="msapplication-square150x150logo" content="img/favicomatic/mstile-150x150.png" />
+	<meta name="msapplication-wide310x150logo" content="img/favicomatic/mstile-310x150.png" />
+	<meta name="msapplication-square310x310logo" content="img/favicomatic/mstile-310x310.png" />
+
+	<meta property="og:image" content="img/og-image.png">
 
 	<link rel="stylesheet" href="css/main.css">
 </head>
